# docs/swagger.yaml
@@ -1,4 +1,30 @@
 definitions:
+  auth.BaseUser:
+    properties:
+      chat_room_id:
+        type: string
+      createdAt:
+        description: 创建时间
+        type: string
+      dev_id:
+        type: string
+      email:
+        type: string
+      id:
+        description: 主键ID
+        type: integer
+      name:
+        type: string
+      password:
+        type: string
+      role:
+        type: string
+      token:
+        type: integer
+      updatedAt:
+        description: 更新时间
+        type: string
+    type: object
   dev.AddSetReq:
     properties:
       duration:
@@ -413,6 +439,28 @@ paths:
           description: token
           schema:
             type: integer
+  /api/v1/user/info:
+    get:
+      consumes:
+      - application/json
+      description: get user info
+      parameters:
+      - description: Authentication header
+        in: header
+        name: super_token
+        type: string
+      - description: 用户名称
+        in: query
+        name: name
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: token
+          schema:
+            $ref: '#/definitions/auth.BaseUser'
   /api/v1/user/login:
     post:
       consumes:
